--- a/index.html
+++ b/index.html
@@ -2,11 +2,225 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Academy: Пинк</title>
+    <link type="text/css" rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
+    <header class="main-header">
+      <div class="main-header__navigation">
+        <a class="logo"></a>
+        <button class="main-header__toggle">Открыть/закрыть меню</button>
+        <nav class="main-nav">
+          <a class="main-nav__link  main-nav__link--active">Главная</a>
+          <a href="photo.html" class="main-nav__link">Фотографии</a>
+          <a href="form.html" class="main-nav__link">Конкурс</a>
+          <a href="https://htmlacademy.ru/" class="main-nav__link">HTML Academy</a>
+        </nav>
+      </div>
+      <div class="main-header__promo">
+        <h2 class="main-header__slogan">
+          Взгляните на&nbsp;жизнь иначе!
+        </h2>
+        <a class="main-header__link" href="https://www.apple.com/ru/itunes/">Скачать приложение</a>
+        <section class="system">
+          <a href="#" class="system__link  system__link--apple">
+            Скачать приложение для IOS
+          </a>
+          <a href="https://play.google.com/store/" class="system__link  system__link--android">
+            Скачать приложение для Android
+          </a>
+          <a href="https://www.microsoft.com/ru-ru/store/apps/" class="system__link  system__link--microsoft">
+            Скачать приложение для Windows
+          </a>
+        </section>
+        <p class="main-header__description">
+          Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8
+        </p>
+      </div>
+    </header>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">Продвинутый HTML и CSS</a>».</p>
-
+    <main class="main-content">
+      <h2 class="main-content__title">
+        Устали от серости мегаполиса?
+      </h2>
+      <h2 class="main-content__title">
+        Нам есть, что вам предложить!
+      </h2>
+      <section class="advantages">
+        <div class="advantages__inner">
+          <div class="advantages__block">
+            <img class="advantages__image" src="img/iphone1.png" alt="Телефон без Pink" width="294" height="382">
+            <h3 class="advantages__title">Поднимает настроение</h3>
+            <p class="advantages__description">
+              Приложение позволит вам победить осеннюю хандру и&nbsp;депрессию буквально в несколько кликов!
+            </p>
+          </div>
+          <div class="advantages__block">
+            <img class="advantages__image" src="img/iphone2.png" alt="Телефон с Pink" width="294" height="382">
+            <h3 class="advantages__title">Меняет мир вокруг</h3>
+            <p class="advantages__description">
+              Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект
+            </p>
+          </div>
+          <div class="advantages__block">
+            <img class="advantages__image" src="img/iphone3.png" alt="Телефон с Pink" width="294" height="382">
+            <h3 class="advantages__title">Заводит новых друзей</h3>
+            <p class="advantages__description">
+              Ставьте лайки, комментируте, делитесь фотографиями с&nbsp;друзьями и&nbsp;заводите новых
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="info">
+        <div class="info__inner">
+          <p class="info__timer">24</p>
+          <h3 class="info__title">Эффект на&nbsp;24&nbsp;часа!</h3>
+          <p class="info__description">
+            Британские ученые провели исследования и&nbsp;доказали,
+            что положительный эффект от&nbsp;использования приложения длится целые сутки!
+          </p>
+          <a class="info__link" href="#">
+            Узнать больше об исследовании
+          </a>
+        </div>
+      </section>
+      <article class="reviews">
+        <section class="slider  slider--reviews">
+          <div class="controls">
+            <input type="radio" id="radio1" name="slide-check" class="visually-hidden" checked>
+            <label for="radio1" class="toggle  toggle--first"></label>
+            <input type="radio" id="radio2" name="slide-check" class="visually-hidden">
+            <label for="radio2" class="toggle  toggle--second"></label>
+            <input type="radio" id="radio3" name="slide-check" class="visually-hidden">
+            <label for="radio3" class="toggle  toggle--third"></label>
+          </div>
+          <div class="slider__slides">
+            <blockquote class="slider__item">
+              Это приложение перевернуло мой мир и&nbsp;позволило по-новому взглянуть на&nbsp;привычные серые вещи! А&nbsp;еще я&nbsp;познакомился со&nbsp;своей будущей женой в&nbsp;комментариях к&nbsp;выложенной фотографии!
+              <cite class="slider__author">
+                <b>Николай Петров</b>
+                <span>25 лет, водитель трамвая</span>
+              </cite>
+            </blockquote>
+          </div>
+        </section>
+      </article>
+      <article class="price">
+        <div class="price__inner">
+          <div class="controls">
+            <input type="radio" id="price_radio1" name="price-check" class="visually-hidden">
+            <label for="price_radio1" class="toggle  toggle--first"></label>
+            <input type="radio" id="price_radio2" name="price-check" class="visually-hidden" checked>
+            <label for="price_radio2" class="toggle  toggle--second"></label>
+            <input type="radio" id="price_radio3" name="price-check" class="visually-hidden">
+            <label for="price_radio3" class="toggle  toggle--third"></label>
+          </div>
+          <table class="price__table  table">
+            <thead class="table__header">
+              <tr class="table__head-row">
+                <th class="visually-hidden">
+                </th>
+                <th class="table__head-cell">
+                  <span class="table__title">База</span>
+                  <span class="table__price">1,99 USD</span>
+                </th>
+                <th class="table__head-cell  table__head-cell--hit">
+                  <span class="table__title">Стандарт</span>
+                  <span class="table__price">3,99 USD</span>
+                </th>
+                <th class="table__head-cell">
+                  <span class="table__title">Анлим</span>
+                  <span class="table__price">9,99 USD</span>
+                </th>
+              </tr>
+            </thead>
+            <tbody class="table__content">
+              <tr class="table__row">
+                <td class="table__cell">Розовый&nbsp;фильтр</td>
+                <td class="table__cell table__cell--yes">
+                  <span>Розовый фильтр</span>
+                </td>
+                <td class="table__cell table__cell--yes">
+                  <span>Розовый фильтр</span>
+                </td>
+                <td class="table__cell table__cell--yes">
+                  <span>Розовый фильтр</span>
+                </td>
+              </tr>
+              <tr class="table__row">
+                <td class="table__cell">Смайлики</td>
+                <td class="table__cell table__cell--no">
+                  <span class="visually-hidden">Смайлики</span>
+                </td>
+                <td class="table__cell table__cell--yes">
+                  <span>Смайлики</span>
+                </td>
+                <td class="table__cell table__cell--yes">
+                  <span>Смайлики</span>
+                </td>
+              </tr>
+              <tr class="table__row">
+                <td class="table__cell">Комментарии</td>
+                <td class="table__cell table__cell--no">
+                  <span>Комментарии</span>
+                </td>
+                <td class="table__cell table__cell--no">
+                  <span>Комментарии</span>
+                </td>
+                <td class="table__cell table__cell--yes">
+                  <span>Комментарии</span>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </article>
+      <article class="contacts">
+        <h2 class="contacts__title">Остались вопросы? Свяжитесь с нами!</h2>
+        <section class="contacts__info">
+          <p class="contacts__phone">
+            Звоните:
+            <a href="tel:+78125556666" class="contacts__link">
+              +7 (812) 555-66-66
+            </a>
+          </p>
+          <p class="contacts__email">
+            Пишите:
+            <a href="mailto:mail@htmlacademy.ru" class="contacts__link">
+              mail@htmlacademy.ru
+            </a>
+          </p>
+          <p class="contacts__address">
+            Приезжайте в гости:
+            <a href="map.html" class="contacts__link">
+              ул. Большая Конюшенная, 19/8
+            </a>
+          </p>
+        </section>
+        <section class="contacts__map"></section>
+      </article>
+    </main>
+    <footer class="page-footer">
+      <a href="index.html" class="logo"></a>
+      <section class="social">
+        <h2 class="visually-hidden">Мы в социальных сетях</h2>
+        <a href="#" class="social__link  social__link--twitter">
+          <span class="visually-hidden">twitter</span>
+        </a>
+        <a href="#" class="social__link  social__link--facebook">
+          <span class="visually-hidden">facebook</span>
+        </a>
+        <a href="#" class="social__link  social__link--youtube">
+          <span class="visually-hidden">youtube</span>
+        </a>
+      </section>
+      <section class="page-footer__copyright">
+        Разработано
+        <a href="https://htmlacademy.ru/" class="page-footer__link">
+          <span class="visually-hidden">HTML Academy</span>
+        </a>
+      </section>
+    </footer>
   </body>
 </html>
