обновлены html файлы

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </nav>
         </div>
       </div>
-      <div class="main-header__content">
+      <div class="main-header__content  main-header__content--index">
         <div class="main-header__content-inner">
           <div class="main-header__promo">
             <h2 class="main-header__slogan">
