Добавлена ретинизация фоновых изображений

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="format-detection" content="telephone=no">
     <title>HTML Academy: Пинк</title>
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="preload" href="css/style.min.css" as="style">
@@ -278,7 +279,7 @@
         </a>
       </section>
     </footer>
-  <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ae912e78fd5ce942b333e89dc74913b2c1bb1aae011ac891582fe70713f948f14&amp;width=100%25&amp;lang=ru_RU&amp;id=yandex_map&amp;scroll=true"></script>
+  <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ac682da515cb0c8b1fffaefe7a7cf26c9b76267e7b10ab86743e196df1cfb4f46&amp;width=100%25&amp;lang=ru_RU&amp;id=yandex_map&amp;scroll=true"></script>
   <script src="js/script.js"></script>
   </body>
 </html>
